# Risa-app

./: .firebaserc  .flutter-plugins  .gitignore  AGENT_RULES.md  AI_FEATURES.md  AI_MODEL_SETUP_GUIDE.md  ANDROID_TV_FIXES.md  ANDROID_TV_GUIDE.md  APK_SERVER_README.md  CLOUD_AND_AI_FEATURES.md  CODEBASE_ANALYSIS_PLAN.md  COMPREHENSIVE_CODEBASE_ANALYSIS.md  DEPLOYMENT.md  ENHANCED_PLAYER_GUIDE.md  ENHANCED_PLAYER_SUMMARY.md  ENHANCEMENTS.md  EPG_CACHING_FIXES.md  EPG_DEBUG.md  EXIT_SCREEN_FOCUS_FIX.md  FEATURES_IMPLEMENTED.md  FOCUS_ENHANCEMENT_TODO.md  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.txt  ISSUES_RESOLVED.md  LICENSE  Modelfile  NEXT_STEPS.md  OAUTH_SETUP_GUIDE.md  OPTIMIZATION_AUDIT.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_IMPLEMENTATION.md  PERFORMANCE_FIXES.md  PERFORMANCE_FIX_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  PLAYER_FREEZING_FIXES.md  PLAYLIST_EPG_ANALYSIS_REPORT.md  PLAYLIST_EPG_ANALYSIS_TODO.md  PRD.md  PROGRESS_UPDATE.md  (+74 more)
.Jules/: palette.md
.firebase/: hosting.YnVpbGQvd2Vi.cache
.jules/: bolt.md  palette.md
android/: build.gradle  build.gradle.kts  gradle.properties  settings.gradle
android/app/src/main/cpp/: CMakeLists.txt  whisper_c.c  whisper_core.c  whisper_integrated.c  whisper_jni.cpp  whisper_minimal.c  whisper_real.c  whisper_simple.cpp
benchmarks/: channel_name_benchmark.dart  trigram_benchmark.dart
docs/: 1gYi8e1ZPrQM5GmDN154U_mJllBgvC9pB  1uQbK48plVRhWhFqNxBeof6_TuaUiX1DE  Bobby_s_Playlist__DragTv_.txt  Bobby_s_Playlist__DragTv__mapped70.m3u  CONTRIBUTING.md  CRITICAL_ISSUES.md  DEVELOPMENT.md  PRD.md  (+45 more)
(+8264 files in other folders)
